--- a/signup/html/home.html
+++ b/signup/html/home.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="header-body-right">
                     <div class="header-body-right-top mb-5 mt-5">
-                        <img class="image-thumbnail-1" src="../image/main_0.png">
+                        <img class="image-thumbnail-1" src="../../images/main_0.png">
                     </div>
                     <div class="header-body-right-bottom mt5" style="line-height: 150%;">
                         전공이 어려운 새내기 !<br>
@@ -75,13 +75,13 @@
                 멘티를 구해요.
             </div>
             <div class="step" style="display: flex; justify-content: center">
-                <img class="image-thumbnail-2" src="../image/main_1.png">
+                <img class="image-thumbnail-2" src="../../images/main_1.png">
             </div>
         </div>
 
         <div class="step-align-right mt-4">
             <div class="step" style="display: flex; justify-content: center">
-                <img class="image-thumbnail-2" src="../image/main_2.png">
+                <img class="image-thumbnail-2" src="../../images/main_2.png">
             </div>
             <div class="step">
                 <p style="opacity: 0.6;">Step.2</p>
@@ -97,13 +97,13 @@
                 학습실을 배정받아요.
             </div>
             <div class="step" style="display: flex; justify-content: center">
-                <img class="image-thumbnail-2" src="../image/main_3.png">
+                <img class="image-thumbnail-2" src="../../images/main_3.png">
             </div>
         </div>
 
         <div class="step-align-right mt-4">
             <div class="step" style="display: flex; justify-content: center">
-                <img class="image-thumbnail-2" src="../image/main_4.png">
+                <img class="image-thumbnail-2" src="../../images/main_4.png">
             </div>
             <div class="step">
                 <p style="opacity: 0.6;">Step.4</p>
@@ -120,7 +120,7 @@
                 멘토가 될 수 있어요.
             </div>
             <div class="step" style="display: flex; justify-content: center">
-                <img class="image-thumbnail-2" src="../image/main_5.png">
+                <img class="image-thumbnail-2" src="../../images/main_5.png">
             </div>
         </div>
     </div>
@@ -141,8 +141,6 @@
     </div>
 </div>
 
-<!--JS include-->
-<script type="text/javascript" src="../js/bootstrap.js"></script>
 
 </body>
 </html>
