--- a/signup/html/home.html
+++ b/signup/html/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>도르마북 | Main</title>
+    <title>도르마북 | 홈</title>
     <link rel="stylesheet" href="../../css/bootstrap.css"/>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="header-top mb-4">
                 <div style="color: white; font-size: 50px; font-weight: bold; flex-grow: 6.4">Dorma Book</div>
                 <button type="button" class="btn btn-signIn">로그인</button>
-                <button type="button" class="btn btn-signUp" onclick="location.href='signUpGuide.html'">회원가입</button>
+                <button type="button" class="btn btn-signUp" onclick="window.location.href = 'https://dormabook.shop/signup/guide'">회원가입</button>
             </div>
             <div class="header-body">
                 <div class="header-body-left">
