--- a/signup/html/signUp.html
+++ b/signup/html/signUp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>도르마북 | Sign Up</title>
+    <title>도르마북 | 회원가입</title>
     <link rel="stylesheet" href="../../css/bootstrap.css"/>
 </head>
 <body>
@@ -62,7 +62,7 @@
 </div>
 
 <!--JS include-->
-<script type="text/javascript" src="../js/signUp.js"></script>
+<script type="text/javascript" src="../signup/js/signUp.js"></script>
 
 </body>
 </html>
