--- a/signup/html/signUpGuide.html
+++ b/signup/html/signUpGuide.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>도르마북 | Sign Up | 동의</title>
+    <title>도르마북 | 회원가입 | 동의</title>
     <link rel="stylesheet" href="../../css/bootstrap.css"/>
 </head>
 <body>
