add page login && search ID, PW && result ID, PW

--- a/signup/html/signUpGuide.html
+++ b/signup/html/signUpGuide.html
@@ -10,7 +10,9 @@
 <div class="container mt-3">
     <div style="display: flex; flex-direction: column; height: 900px">
         <div class="mb-4" style="flex-grow: 1;">
-            <div style="color: #00C473; font-size: 50px; font-weight: bold; flex-grow: 6.4">Dorma Book</div>
+            <div style="color: #00C473; font-size: 50px; font-weight: bold; width: 30%">
+                <p id="logo" style="cursor: pointer;">Dorma Book</p>
+            </div>
         </div>
 
         <div class="mb-4"
