--- a/signup/html/home.html
+++ b/signup/html/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>도르마북 | 홈</title>
+    <title>도르마북 | 로그인</title>
     <link rel="stylesheet" href="../../css/bootstrap.css"/>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="header-top mb-4">
                 <div style="color: white; font-size: 50px; font-weight: bold; flex-grow: 6.4">Dorma Book</div>
                 <button type="button" class="btn btn-signIn">로그인</button>
-                <button type="button" class="btn btn-signUp" onclick="window.location.href = 'https://dormabook.shop/signup/guide'">회원가입</button>
+                <button type="button" class="btn btn-signUp">회원가입</button>
             </div>
             <div class="header-body">
                 <div class="header-body-left">
@@ -141,6 +141,7 @@
     </div>
 </div>
 
+<script type="text/javascript" src="../signup/js/home.js"></script>
 
 </body>
 </html>
