--- a/signup/html/signUp.html
+++ b/signup/html/signUp.html
@@ -9,7 +9,9 @@
 <body>
 <div class="container mt-3">
     <div class="mb-4">
-        <div style="color: #00C473; font-size: 50px; font-weight: bold; flex-grow: 6.4">Dorma Book</div>
+        <div style="color: #00C473; font-size: 50px; font-weight: bold; width: 30%">
+            <p id="logo" style="cursor: pointer;">Dorma Book</p>
+        </div>
     </div>
     <div style="display: flex; flex-direction: column; height: 800px; margin-left: 320px; margin-right: 320px; margin-top: 80px;">
         <form>
