modify login js html

--- a/login/html/login.html
+++ b/login/html/login.html
@@ -23,11 +23,11 @@
       </div>
       <div class="form-floating mb-3">
         <input type="password" class="form-control" id="password" placeholder="Password" required
-               maxlength="12" minlength="8">
+              >
         <label for="password">Password</label>
       </div>
       <div class="mb-4" style="text-align: center">
-        <button type="submit" class="btn-submit" style="margin-top: 100px; margin-left: 0;">로그인</button>
+        <button type="button" id="login" class="btn-submit" style="margin-top: 100px; margin-left: 0;">로그인</button>
       </div>
     </form>
     <div style="display: flex; text-align: center;">
@@ -45,6 +45,7 @@
 </div>
 
 <!--JS include-->
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script type="text/javascript" src="../login/js/login.js"></script>
 
 </body>
