modify login html

--- a/login/html/resultID.html
+++ b/login/html/resultID.html
@@ -38,7 +38,7 @@
 </div>
 
 <!--JS include-->
-<script type="text/javascript" src="../login/js/resultID.js"></script>
+<script type="text/javascript" src="/login/js/resultID.js"></script>
 
 </body>
 </html>
