--- a/login/html/resultPW.html
+++ b/login/html/resultPW.html
@@ -37,7 +37,7 @@
 </div>
 
 <!--JS include-->
-<script type="text/javascript" src="../login/js/resultPW.js"></script>
+<script type="text/javascript" src="/login/js/resultPW.js"></script>
 
 </body>
 </html>
