--- a/login/html/searchPW.html
+++ b/login/html/searchPW.html
@@ -49,7 +49,7 @@
 </div>
 
 <!--JS include-->
-<script type="text/javascript" src="../login/js/searchPW.js"></script>
+<script type="text/javascript" src="/login/js/searchPW.js"></script>
 
 </body>
 </html>
