--- a/login/html/searchID.html
+++ b/login/html/searchID.html
@@ -45,7 +45,7 @@
 </div>
 
 <!--JS include-->
-<script type="text/javascript" src="../login/js/searchID.js"></script>
+<script type="text/javascript" src="/login/js/searchID.js"></script>
 
 </body>
 </html>
