--- a/signup/html/signUp.html
+++ b/signup/html/signUp.html
@@ -64,7 +64,8 @@
 </div>
 
 <!--JS include-->
-<script type="text/javascript" src="../signup/js/signUp.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript" src="../js/signUp.js"></script>
 
 </body>
 </html>
