add search ID & PW func

--- a/login/html/resultID.html
+++ b/login/html/resultID.html
@@ -22,7 +22,7 @@
                 <div style="font-size: 30px; flex: 1">
                     회원님의 아이디는
                 </div>
-                <div style="font-size: 40px; font-weight: bold; flex: 1; text-align: center; vertical-align: center">
+                <div id="userId" style="font-size: 40px; font-weight: bold; flex: 1; text-align: center; vertical-align: center">
                     example****
                 </div>
                 <div style="font-size: 30px; flex: 1; text-align: center;">
@@ -38,6 +38,7 @@
 </div>
 
 <!--JS include-->
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script type="text/javascript" src="/login/js/resultID.js"></script>
 
 </body>
