modify home, signUp

--- a/signup/html/signUp.html
+++ b/signup/html/signUp.html
@@ -65,7 +65,7 @@
 
 <!--JS include-->
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script type="text/javascript" src="../js/signUp.js"></script>
+<script type="text/javascript" src="../signup/js/signUp.js"></script>
 
 </body>
 </html>
