--- a/signup/html/home.html
+++ b/signup/html/home.html
@@ -13,8 +13,8 @@
         <div class="header-wrap">
             <div class="header-top mb-4">
                 <div style="color: white; font-size: 50px; font-weight: bold; flex-grow: 6.4">Dorma Book</div>
-                <button type="button" class="btn btn-signIn">로그인</button>
-                <button type="button" class="btn btn-signUp">회원가입</button>
+                <button type="button" id="signInBtn" class="btn btn-signIn">로그인</button>
+                <button type="button" id="signUpBtn" class="btn btn-signUp">회원가입</button>
             </div>
             <div class="header-body">
                 <div class="header-body-left">
