--- a/mypage/html/myProfile.html
+++ b/mypage/html/myProfile.html
@@ -105,7 +105,7 @@
                             </div>
 
                             <div id="t1_postFooter" class="t1_postFooter" style="flex-grow: 1;">
-                                <button type="button" class="btn-submit" id="testBtn">게시글 작성</button>
+                                <button type="button" class="btn-submit" id="testBtn" onclick="location.href = 'https://dormabook.shop/postmento'">게시글 작성</button>
                             </div>
                         </div>
                     </div>
@@ -209,6 +209,6 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-base64@3.6.1/base64.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script type="text/javascript" src="../js/myProfile.js"></script>
+<script type="text/javascript" src="../mypage/js/myProfile.js"></script>
 </body>
 </html>
